# tsukuba_challenge_2019

./: .gitignore  .gitmodules  README.md
catkin_ws/: build_env.sh  build_ros_tree.sh  run_all_tests.sh
catkin_ws/src/: .rosinstall  CMakeLists.txt  CMakeLists.txt.bak
catkin_ws/src/configs/: CMakeLists.txt  package.xml
catkin_ws/src/configs/cartographer/: backpack_2d.lua  trajectory_builder_2d.lua
catkin_ws/src/configs/control/: imini_control_limit.yaml  imini_ps3_holonomic_config.yaml  imini_yp_spur.param  imini_yp_spur.yaml  ps3_holonomic_config.yaml  ter2_control_limit.yaml  ter2_yp_spur.param  ter2_yp_spur.yaml
catkin_ws/src/configs/costmap/: ter2_common_costmap.yaml  ter2_global_costmap.yaml  ter2_local_costmap.yaml
catkin_ws/src/configs/frame/: imini_frame_def.yaml  ter2_frame_def.yaml
catkin_ws/src/configs/hardware/: imini_config.yaml  ter2_config.yaml  ter2_hardware_config.yaml
catkin_ws/src/configs/mapping/: backpack_2d.urdf  pose_graph.lua  ter2_gmapping.yaml  trajectory_builder_2d.lua
catkin_ws/src/configs/navigation/: imini_amcl.yaml  imini_gmapping.yaml  imini_planner.yaml  ter2_amcl.yaml  ter2_gmapping.yaml  ter2_imini_amcl.yaml  ter2_movebase.yaml  ter2_navfn_ros.yaml  ter2_teb_local_planner.yaml
catkin_ws/src/configs/odometry/: imini_odometry.yaml  ter2_odometry.yaml
catkin_ws/src/configs/perception/: ter2_sgm.yaml
catkin_ws/src/configs/rviz/: amcl_simulation.rviz  autorun.rviz  cartographer_simulation.rviz  cartographer_simulation_odom_conf.rviz  gmapping_simulation.rviz
catkin_ws/src/configs/topic/: imini_topic_def.yaml  ter2_topic_def.yaml
catkin_ws/src/data/: CMakeLists.txt  package.xml
catkin_ws/src/data/waypoint/: home_2019-08-25-00-53-17.csv
catkin_ws/src/imu_adjust/: CMakeLists.txt  nodelet_plugins.xml  package.xml
catkin_ws/src/imu_adjust/include/imu_adjust/: nodelet_imu_adjust.h
catkin_ws/src/imu_adjust/src/: nodelet_imu_adjust.cpp
catkin_ws/src/kmsgs/: CMakeLists.txt  package.xml
catkin_ws/src/kmsgs/msg/: Gnd.msg  Imu.msg  VRx.msg  VTx.msg  Whl.msg
catkin_ws/src/laserscan_to_pointcloud2/: CMakeLists.txt  nodelet_plugins.xml  package.xml
catkin_ws/src/laserscan_to_pointcloud2/src/: laserscan_to_pointcloud_nodelet.cpp
catkin_ws/src/messages/: CMakeLists.txt  package.xml
catkin_ws/src/messages/srv/: initialize_pose.srv
catkin_ws/src/ndt_pose_initializer/: CMakeLists.txt  nodelet_plugins.xml  package.xml
catkin_ws/src/ndt_pose_initializer/src/: ndt_pose_initializer_nodelet.cpp
catkin_ws/src/odometry/: CMakeLists.txt  nodelet_plugins.xml  package.xml
catkin_ws/src/odometry/src/: odometry.cpp  odometry.h  odometry_nodelet.cpp
catkin_ws/src/params_hm/: CMakeLists.txt  package.xml
catkin_ws/src/params_hm/autoware/: astar_avoid.yaml  common.yaml  costmap_generator.yaml  lidar_euclidean_cluster_detect.yaml  ndt_matching.yaml  velocity_set.yaml  waypoint_replanner.yaml
catkin_ws/src/params_hm/common/: imu_adjust.yaml  mcl_3dl.yaml  nmea_navsat_driver.yaml  odometry.yaml  ps3_holonomic_config.yaml  robot.yaml  status_management.yaml  ublox_gps1.yaml  velodyne.yaml  yp_spur.param
catkin_ws/src/params_hm/rviz/: config.rviz  localization.rviz
catkin_ws/src/params_tc/: CMakeLists.txt  package.xml
catkin_ws/src/params_tc/autoware/: astar_avoid.yaml  costmap_generator.yaml  lane_navi.yaml  lane_select.yaml  ndt_matching.yaml  pure_pursuit_controller.yaml  velocity_set.yaml  waypoint_replanner.yaml
catkin_ws/src/params_tc/common/: imu_adjust.yaml  ps3_holonomic_config.yaml  status_management.yaml
catkin_ws/src/params_tc/rviz/: bag_check.rviz  config.rviz  localization.rviz
catkin_ws/src/scripts/: CMakeLists.txt  package.xml
catkin_ws/src/scripts/autorun/: ch1_left_ter2_autorun.launch  ch1_ter2_autorun.launch  ch2_ter2_autorun.launch  ch3_ter2_autorun.launch  ch4_ter2_autorun.launch  ch5_ter2_autorun.launch  ch6_ter2_autorun.launch  hm_ter2_autorun.launch  hm_ter2_autorun_copy.launch  hm_ter2_autorun_in_movearea.launch  imini_autorun.launch  ter2_autorun.launch
catkin_ws/src/scripts/includes/: amcl.launch.xml  cirkit_waypoint_generator.launch.xml  cirkit_waypoint_publisher.launch.xml  common_param_loader.launch.xml  gmapping.launch.xml  imu_arduino.launch.xml  imu_filter.launch.xml  joy_control.launch.xml  map_server.launch.xml  move_base.launch.xml  odometry.launch.xml  param_loader.launch.xml  pc_nodelet_mgr.launch.xml  sgm_cuda.launch.xml  stixel_cuda.launch.xml  test_zed.launch.xml  urg_node.launch.xml  urg_node_tf.launch.xml  ypspur_ros.launch.xml  zed.launch.xml  zed_tf.launch.xml
catkin_ws/src/scripts/logging/: imini_ps3_logging.launch  ter2_manual_logging.launch  ter2_manual_logging_w_cam.launch  ter2_ps3_logging.launch  ter2_ps3_logging_w_cam.launch
catkin_ws/src/scripts/mapping/: imini_gmapping.launch  ter2_cartographer.launch  ter2_gmapping.launch
catkin_ws/src/scripts/py2/: common.py  control_window.py  imu_offset_calculater.py  point_transform_solver.py  pose_transform.py  pose_writer.py  publish_ndt_config.py  status_manager.py  text_to_speech.py  text_to_speech_node.py
catkin_ws/src/sgm_cuda/: CMakeLists.txt  nodelet_plugins.xml  package.xml
catkin_ws/src/static_transform_publisher_param_support/: CMakeLists.txt  package.xml
catkin_ws/src/status_management/: CMakeLists.txt  nodelet_plugins.xml  package.xml
catkin_ws/src/status_management/include/status_management/: autorun_config.h  current_pose_generator.h  status_management_helper.h  status_management_util.h
catkin_ws/src/status_management/src/: autorun_config.cpp  current_pose_generator.cpp  status_management_helper.cpp  status_management_nodelet.cpp  status_management_util.cpp  status_management_util.h  test.cpp
catkin_ws/src/status_management/test/: test_autorun_config.cpp  test_current_pose_generator.cpp
catkin_ws/src/status_management/test/data/: autorun.yaml  course_start.yaml
catkin_ws/src/stixel_cuda/: CMakeLists.txt  nodelet_plugins.xml  package.xml
catkin_ws/src/zed_wrapper/: CMakeLists.txt  nodelet_plugins.xml  package.xml
catkin_ws/src/zed_wrapper/src/: zed_wrapper_nodelet.cpp
(+169 files in other folders)
