<?xml version="1.0"?>
<package format="2">
  <name>imu_adjust</name>
  <version>0.0.0</version>
  <description>The imu_adjust package</description>
  <maintainer email="koichi@todo.todo">koichi</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pluginlib</build_depend>  
  <build_depend>nodelet</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
