<?xml version="1.0"?>
<package format="2">
  <name>zed_wrapper</name>
  <version>0.0.0</version>
  <description>The zed_wrapper package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="koichi@todo.todo">koichi</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>tf2_ros</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>opencv</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>nodelet</build_depend>

  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rosconsole</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>opencv</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
